--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
-    "react": "16.8.0",
+    "react": "^16.13.1",
     "react-dom": "16.8.0",
-    "react-redux": "5.0.6",
+    "react-redux": "^6.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-form": "^8.3.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
